+ Preload hints, and HTTP 103 Early Hints [gh-458]
+ Language selection after logging in [gh-490]
+ Additional colour themes (CSS) and easier theme selection
~ Running `composer install` will now always create the `version.php` file
~ Don't show backup and scanner scheduling buttons unless corresponding software installed [gh-413]
~ More accessible ID column labels [gh-446]
# [HIGH] Users should not be able to be copied [gh-481]
# [MEDIUM] Sending emails with the default language results in untranslated variables
# [LOW] PHP error when the browser returns invalid data during WebAuthn [gh-406]
# [LOW] TinyMCE content always dark [gh-410]
# [LOW] Backup not Pro when extension not installed [gh-414]
# [LOW] Date/time parsing on reports view [gh-419]
# [LOW] MFA method setup has non-functional toolbar buttons [gh-468]
# [LOW] Filtering the log files by site name did not work consistently

Akeeba Panopticon 1.0.7
================================================================================
# [HIGH] Error when your PHP version is out of date [gh-392]
# [HIGH] “You do not seem to have Akeeba Backup Professional installed.” viewing some sites

Akeeba Panopticon 1.0.6
================================================================================
+ Connection Doctor [gh-345]
+ Site notes [gh-363]
~ Improve login language selection [gh-367]
~ Translations now use PO files instead of a third party service
~ Light and Dark Mode for the TinyMCE and ACE editors
# [HIGH] Wrong assignment of sites to groups if there are gaps in numbering [gh-360]
# [MEDIUM] No fallback to English if the browser, user configuration, and global configuration don't include it [gh-368]
# [MEDIUM] No TinyMCE editor when using the `.htaccess` file
# [LOW] SMTP Authentication radio always appears disabled when loading System Configuration [gh-390]

Akeeba Panopticon 1.0.5
================================================================================