@@ -7,6 +7,7 @@
 
 defined('AKEEBA') || die;
 
+use Akeeba\Panopticon\Library\Enumerations\JoomlaUpdateRunState;
 use Akeeba\Panopticon\Library\JoomlaVersion\JoomlaVersion;
 use Akeeba\Panopticon\Library\Version\Version;
 use Akeeba\Panopticon\Model\Site;
@@ -23,7 +24,11 @@ $stability           = $config->get('core.current.stability');
 $canUpgrade          = $config->get('core.canUpgrade');
 $latestJoomlaVersion = $config->get('core.latest.version');
 $lastError           = trim($config->get('core.lastErrorMessage') ?? '');
-$jUpdateFailure      = !$config->get('core.extensionAvailable', true) || !$config->get('core.updateSiteAvailable', true);
+$jRunState           = $item->getJoomlaUpdateRunState();
+$jUpdateFailure      = !$config->get('core.extensionAvailable', true)
+                       || !$config->get(
+		'core.updateSiteAvailable', true
+	);
 $token               = $this->container->session->getCsrfToken()->getValue();
 $returnUrl           = base64_encode(\Awf\Uri\Uri::getInstance()->toString());
 $jVersionHelper      = new JoomlaVersion($this->getContainer());
@@ -31,34 +36,35 @@ $jVersionHelper      = new JoomlaVersion($this->getContainer());
 
 @repeatable('joomlaVersion', $jVersion)
 {{{ $jVersion }}}
-<?php $version = Version::create($jVersion) ?>
+<?php
+$version = Version::create($jVersion) ?>
 @if($version->isDev())
     <sup>
-            <span class="badge bg-danger">
-                <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_DEV_SHORT')</span>
-                <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_DEV_LONG')</span>
-            </span>
+        <span class="badge bg-danger">
+            <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_DEV_SHORT')</span>
+            <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_DEV_LONG')</span>
+        </span>
     </sup>
 @elseif($version->isAlpha())
     <sup>
-            <span class="badge bg-danger">
-                <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_ALPHA_SHORT')</span>
-                <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_ALPHA_LONG')</span>
-            </span>
+        <span class="badge bg-danger">
+            <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_ALPHA_SHORT')</span>
+            <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_ALPHA_LONG')</span>
+        </span>
     </sup>
 @elseif($version->isBeta())
     <sup>
-            <span class="badge text-bg-warning">
-                <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_BETA_SHORT')</span>
-                <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_BETA_LONG')</span>
-            </span>
+        <span class="badge text-bg-warning">
+            <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_BETA_SHORT')</span>
+            <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_BETA_LONG')</span>
+        </span>
     </sup>
 @elseif($version->isRC())
     <sup>
-            <span class="badge bg-info">
-                <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_RC_SHORT')</span>
-                <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_RC_LONG')</span>
-            </span>
+        <span class="badge bg-info">
+            <span aria-hidden="true">@lang('PANOPTICON_MAIN_SITES_LBL_RC_SHORT')</span>
+            <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_RC_LONG')</span>
+        </span>
     </sup>
 @else
     <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_STABLE_LONG')</span>
@@ -66,11 +72,11 @@ $jVersionHelper      = new JoomlaVersion($this->getContainer());
 @endrepeatable
 
 @repeatable('joomlaLogo')
-    <span class="fab fa-joomla" aria-hidden="true"
-          data-bs-toggle="tooltip" data-bs-placement="bottom"
-          data-bs-title="Joomla!&reg;"
-    ></span>
-    <span class="visually-hidden">Joomla!&reg;</span>
+<span class="fab fa-joomla" aria-hidden="true"
+      data-bs-toggle="tooltip" data-bs-placement="bottom"
+      data-bs-title="Joomla!&reg;"
+></span>
+<span class="visually-hidden">Joomla!&reg;</span>
 @endrepeatable
 
 <div class="d-flex flex-row gap-2">
@@ -86,7 +92,8 @@ $jVersionHelper      = new JoomlaVersion($this->getContainer());
 
     {{-- Did we have an error last time we tried to update the site information? --}}
     @if ($lastError)
-        <?php $siteInfoLastErrorModalID = 'silem-' . md5(random_bytes(120)); ?>
+			<?php
+			$siteInfoLastErrorModalID = 'silem-' . md5(random_bytes(120)); ?>
         <div>
             <div class="btn btn-danger btn-sm" aria-hidden="true"
                  data-bs-toggle="modal" data-bs-target="#{{ $siteInfoLastErrorModalID }}"
@@ -140,17 +147,17 @@ $jVersionHelper      = new JoomlaVersion($this->getContainer());
                 @lang('PANOPTICON_MAIN_SITES_LBL_JOOMLA_UPDATES_BROKEN')
             </span>
         </div>
-    @elseif ($config->get('core.canUpgrade', false) && $item->isJoomlaUpdateTaskStuck())
+    @elseif ($jRunState === JoomlaUpdateRunState::ERROR)
         <div>
-            <div class="badge text-bg-light"
+            <div class="badge text-bg-danger py-2"
                  data-bs-toggle="tooltip" data-bs-placement="bottom"
                  data-bs-title="@lang('PANOPTICON_MAIN_SITES_LBL_CORE_STUCK_UPDATE')"
             >
-                <span class="fa fa-bell" aria-hidden="true"></span>
+                <span class="fa fa-fw fa-circle-xmark" aria-hidden="true"></span>
                 <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_CORE_STUCK_UPDATE')</span>
             </div>
         </div>
-    @elseif($config->get('core.canUpgrade', false) && $item->isJoomlaUpdateTaskRunning())
+    @elseif($jRunState === JoomlaUpdateRunState::RUNNING)
         <div>
             <div class="badge bg-info-subtle text-primary"
                  data-bs-toggle="tooltip" data-bs-placement="bottom"
@@ -160,7 +167,7 @@ $jVersionHelper      = new JoomlaVersion($this->getContainer());
                 <span class="visually-hidden">@lang('PANOPTICON_MAIN_SITES_LBL_CORE_RUNNING_UPDATE')</span>
             </div>
         </div>
-    @elseif ($config->get('core.canUpgrade', false) && $item->isJoomlaUpdateTaskScheduled())
+    @elseif ($jRunState === JoomlaUpdateRunState::SCHEDULED)
         <div>
             <div class="badge bg-info-subtle text-info"
                  data-bs-toggle="tooltip" data-bs-placement="bottom"
@@ -174,9 +181,9 @@ $jVersionHelper      = new JoomlaVersion($this->getContainer());
 
     {{-- Joomla! version --}}
     @if (empty($jVersion))
-		<div>
-        	<span class="badge bg-secondary-subtle text-dark">@lang('PANOPTICON_MAIN_SITES_LBL_JVERSION_UNKNOWN')</span>
-		</div>
+        <div>
+            <span class="badge bg-secondary-subtle text-dark">@lang('PANOPTICON_MAIN_SITES_LBL_JVERSION_UNKNOWN')</span>
+        </div>
     @else
         @if ($canUpgrade)
             <div
