@@ -180,6 +180,7 @@ PANOPTICON_TASK_JOOMLAUPDATE_ERR_FINALISE_FAILED="Finalising the update has fail
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_NOT_J40="This is not a Joomla 4.0.0 to 4.0.3 (inclusive) site; cannot use restore.php for updates."
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_NOT_J404="This is not a Joomla 4.0.4 or later site; cannot use extract.php for updates."
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_UNEXPECTED_HTTP="Unexpected HTTP %d while extracting the update; the site may be broken."
+PANOPTICON_TASK_JOOMLAUPDATE_ERR_HTTP_401="HTTP status 401 while extracting the update. Your site's administrator folder is password protected. Please edit the site and enter the Administrator Directory Username and Password in the Connection tab. Then, retry scheduling an update for this site."
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_INVALID_JSON="Invalid JSON response from the update extraction script; the site may be broken."
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_EXTRACTION_FAILED="The update extraction has failed; the site may be broken. Returned error message: “%s”"
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_NO_FACTORY="The update extraction script did not return its internal state; the site may be broken."
